# cpp_statemachine_generator

./: .gitignore  .project  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
Statemachine Test/: .project  IoArHandler.notation  IoArHandler.uml  IoArHandler_de_DE.properties
Statemachine Test/src-gen/: IoArHandler.cxx  IoArHandlerMainDeclaration.hxx  IoArHandlerMainHandlers.hxx  IoArHandlerMainInstance.hxx  IoArHandlerMainPrototypes.hxx
experimental_epsilon/: .project  plugin.xml
experimental_epsilon/src/: Declaration.egl  DeclarationRegion.egl  DeclarationState.egl  DeclarationTransition.egl  Instance.egl  InstanceHandler.egl  InstanceHandlerTransition.egl  InstanceRegion.egl  InstanceState.egl  InstanceTransition.egl  InstanceTransitionVariable.egl  Model.egl  Operations.egl  Program.egx  Transformations.egl  XmiInterface.egl  XmiModel.egl
generator/: .classpath  .project  AstDocumentation.txt  Generator.launch  GeneratorScXml.launch  GeneratorXmi.launch  JAR.launch  pom.xml
generator/src/: DeclarationRegion.egl  Generator.java  Program.egx  XmiDeclaration.egl  XmiInstance.egl
generator/src/generator/: Declaration.egl  DeclarationState.egl  Generator.java  Instance.egl  InstanceHandler.egl  InstanceHandlerTransition.egl  InstanceHandlerTransitionRoot.egl  InstanceRegion.egl  InstanceState.egl  Interface.egl  Program.egx  RemoveElementsByNamespace.java  ScxmlDeclaration.egl  ScxmlInstance.egl  ScxmlInterface.egl  ScxmlModel.egl  ScxmlProgram.egx  Transformations.egl  UserInput.java  XmiDeclaration.egl  XmiInstance.egl  XmiInterface.egl  XmiModel.egl  XmiProgram.egx
net.ziegelmeier.statemachine.uml.gen.cpp/: .project  build.properties
net.ziegelmeier.statemachine.uml.gen.cpp.feature/: .project  feature.xml
net.ziegelmeier.statemachine.uml.gen.cpp.ui/: .project  plugin.xml
net.ziegelmeier.statemachine.uml.gen.cpp.ui/src/net/ziegelmeier/statemachine/ui/: Activator.java
net.ziegelmeier.statemachine.uml.gen.cpp.ui/src/net/ziegelmeier/statemachine/ui/common/: GenerateAll.java
net.ziegelmeier.statemachine.uml.gen.cpp.updatesite/: .project  index.html  site.xml
net.ziegelmeier.statemachine.uml.gen.cpp.updatesite/web/: site.xsl
net.ziegelmeier.statemachine.uml.gen.cpp/tasks/: generate.xml  generateTarget.xml
scxml/: README.md  StatemachineTest.scxml
test/: IoArHandler.cxx  ScXmlFsm.cxx  ScXmlFsm.hxx  ScXmlFsmImpl.cxx  ScXmlFsmImpl.hxx  XmiFsm.cxx  XmiFsm.hxx  XmiFsmImpl.cxx  XmiFsmImpl.hxx  main.cxx
test/scxml/: README.md  ScXmlTest.scxml  StatemachineTest.scxml
test/xmi/: .project  IoArHandler.notation  README.md  XmiTest.aird  XmiTest.notation  XmiTest.uml
xmi/: .project  IoArHandler.uml  IoArHandler_de_DE.properties  README.md
(+1 files in other folders)
